--- a/keyboard/keyboard.ioc
+++ b/keyboard/keyboard.ioc
@@ -44,26 +44,28 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PA7
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
 Mcu.Pin3=PB10
 Mcu.Pin4=PB11
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=21
+Mcu.Pin5=PB13
+Mcu.Pin6=PB14
+Mcu.Pin7=PB15
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -95,9 +97,13 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=ROW1_out
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA8.GPIO_Label=COL1
+PA8.GPIO_Label=COL1_in
 PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Input
@@ -111,26 +117,31 @@ PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=OLED_SDA
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=COL4_in
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.Locked=true
+PB13.Signal=GPIO_Input
 PB14.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB14.GPIO_Label=COL3
+PB14.GPIO_Label=COL3_in
 PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Signal=GPIO_Input
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB15.GPIO_Label=COL2
+PB15.GPIO_Label=COL2_in
 PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
 PB15.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=ROW1
+PB3.GPIO_Label=ROW2_out
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=ROW2
+PB4.GPIO_Label=ROW3_out
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=ROW3
+PB5.GPIO_Label=ROW4_out
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
