--- a/keyboard/keyboard.ioc
+++ b/keyboard/keyboard.ioc
@@ -57,7 +57,7 @@ Mcu.Pin19=PB6
 Mcu.Pin2=PA7
 Mcu.Pin20=PB7
 Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin3=PB10
 Mcu.Pin4=PB11
 Mcu.Pin5=PB13
@@ -215,13 +215,16 @@ SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,PRODUCT_STRING_HID_FS
-USB_DEVICE.PRODUCT_STRING_HID_FS=STM32 Keyboard
-USB_DEVICE.VirtualMode=Hid
-USB_DEVICE.VirtualModeFS=Hid_FS
+USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
+USB_DEVICE.CUSTOM_HID_FS_BINTERVAL=0x0A
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,CUSTOM_HID_FS_BINTERVAL,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE,PRODUCT_STRING_CUSTOMHID_FS
+USB_DEVICE.PRODUCT_STRING_CUSTOMHID_FS=Phuong's DIY Keypad
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=8
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=120
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
